// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label renders with different Colours 1`] = `
Array [
  <div
    className="flex items-center rounded-moon-i-xs leading-4 py-1 
  pr-2 
  pl-2 uppercase font-medium text-[0.625rem] tracking-[0.063rem] text-gohan bg-bulma"
  >
    Xsmall
  </div>,
  <div
    className="flex items-center rounded-moon-i-xs leading-4 py-1 
  pr-2 
  pl-2 uppercase font-medium text-[0.625rem] tracking-[0.063rem] text-goten bg-trunks"
  >
    Xsmall
  </div>,
  <div
    className="flex items-center rounded-moon-i-xs leading-4 py-1 
  pr-2 
  pl-2 uppercase font-medium text-[0.625rem] tracking-[0.063rem] text-goten bg-dodoria"
  >
    Xsmall
  </div>,
]
`;

exports[`Label renders with different Icons 1`] = `
Array [
  <div
    className="flex flex-wrap items-center justify-around gap-2 w-full"
  >
    <div
      className="flex items-center rounded-moon-i-xs leading-4 py-0 
  pr-2 
  pl-1 uppercase font-medium text-[0.563rem] tracking-[0.031rem] text-gohan bg-bulma"
    >
      <span
        className="me-1 text-[0.75rem]"
      >
        <svg
          className="sc-iqGgem"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
    </div>
    <div
      className="flex items-center rounded-moon-i-xs leading-4 py-0 
  pr-1 
  pl-2 uppercase font-medium text-[0.563rem] tracking-[0.031rem] text-gohan bg-bulma"
    >
      Twoxsmall
      <span
        className="ms-1 text-[0.75rem]"
      >
        <svg
          className="sc-jgbSNz"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </div>
    <div
      className="flex items-center rounded-moon-i-xs leading-4 py-0 
  pr-1 
  pl-1 uppercase font-medium text-[0.563rem] tracking-[0.031rem] text-gohan bg-bulma"
    >
      <span
        className="me-1 text-[0.75rem]"
      >
        <svg
          className="sc-iqGgem"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Twoxsmall
      <span
        className="ms-1 text-[0.75rem]"
      >
        <svg
          className="sc-jgbSNz"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </div>
  </div>,
  <div
    className="flex flex-wrap items-center justify-around gap-2 w-full"
  >
    <div
      className="flex items-center rounded-moon-i-xs leading-4 py-1 
  pr-2 
  pl-1 uppercase font-medium text-[0.625rem] tracking-[0.063rem] text-gohan bg-bulma"
    >
      <span
        className="me-1 text-[1rem]"
      >
        <svg
          className="sc-iqGgem"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
    </div>
    <div
      className="flex items-center rounded-moon-i-xs leading-4 py-1 
  pr-1 
  pl-2 uppercase font-medium text-[0.625rem] tracking-[0.063rem] text-gohan bg-bulma"
    >
      Xsmall
      <span
        className="ms-1 text-[1rem]"
      >
        <svg
          className="sc-jgbSNz"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </div>
    <div
      className="flex items-center rounded-moon-i-xs leading-4 py-1 
  pr-1 
  pl-1 uppercase font-medium text-[0.625rem] tracking-[0.063rem] text-gohan bg-bulma"
    >
      <span
        className="me-1 text-[1rem]"
      >
        <svg
          className="sc-iqGgem"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M16 21.278v-6.334m0-2.638v-1.584M25.5 16a9.5 9.5 0 11-19 0 9.5 9.5 0 0119 0z"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
      Xsmall
      <span
        className="ms-1 text-[1rem]"
      >
        <svg
          className="sc-jgbSNz"
          fill="none"
          height="1em"
          viewBox="0 0 32 32"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7 7l9 9m0 0l-9 9m9-9l9 9m-9-9l9-9"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
          />
        </svg>
      </span>
    </div>
  </div>,
]
`;

exports[`Label renders with different LetterCases 1`] = `
Array [
  <div
    className="flex items-center rounded-moon-i-xs leading-4 py-1 
  pr-2 
  pl-2 uppercase font-medium text-[0.625rem] tracking-[0.063rem] text-gohan bg-bulma"
  >
    Default
  </div>,
  <div
    className="flex items-center rounded-moon-i-xs leading-4 py-1 
  pr-2 
  pl-2 text-[0.75rem] tracking-[0.063rem] text-gohan bg-bulma"
  >
    Lowercase
  </div>,
]
`;

exports[`Label renders with different Sizes 1`] = `
Array [
  <div
    className="flex items-center rounded-moon-i-xs leading-4 py-0 
  pr-2 
  pl-2 uppercase font-medium text-[0.563rem] tracking-[0.031rem] text-gohan bg-bulma"
  >
    Twoxsmall (2xs)
  </div>,
  <div
    className="flex items-center rounded-moon-i-xs leading-4 py-1 
  pr-2 
  pl-2 uppercase font-medium text-[0.625rem] tracking-[0.063rem] text-gohan bg-bulma"
  >
    Xsmall (sm)
  </div>,
  <div
    className="flex items-center rounded-moon-i-xs leading-4 py-0 
  pr-2 
  pl-2 text-[0.625rem] tracking-[0.063rem] text-gohan bg-bulma"
  >
    Twoxsmall (2xs)
  </div>,
  <div
    className="flex items-center rounded-moon-i-xs leading-4 py-1 
  pr-2 
  pl-2 text-[0.75rem] tracking-[0.063rem] text-gohan bg-bulma"
  >
    Xsmall (sm)
  </div>,
]
`;
